# CollapseScanner

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  main.py  requirements.txt  scanner.py  utils.py
.github/workflows/: rust.yml
scripts/: jarfixer.rs  remapper.rs
src/: cli.rs  config.rs  database.rs  detection.rs  errors.rs  filters.rs  main.rs  output.rs  parser.rs  scanner.rs  types.rs  utils.rs
src/gui/: app.rs  icons.rs  message.rs  mod.rs  state.rs  theme.rs
src/scanner/: api_analyzer.rs  class.rs  jar.rs  mod.rs  path.rs  scan.rs
