[package]
name = "collapsescanner"
version = "1.0.0"
edition = "2021"
authors = ["dest4590"]
default-run = "collapsescanner"

[[bin]]
name = "collapsescanner"
path = "src/main.rs"
required-features = []

[[bin]]
name = "remapper"
path = "scripts/remapper.rs"

[features]
default = ["cli"]
cli = ["clap", "colored"]
gui = ["iced", "rfd", "tokio"]

[dependencies]
regex = "1.12.2"
zip = "6.0.0"
indicatif = "0.18.3"
lazy_static = "1.5.0"
url = "2.5.7"
hex = "0.4.3"
byteorder = "1.5.0"
walkdir = "2.5.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
rayon = "1.11.0"
encoding_rs = "0.8.35"
wildmatch = "2.6.0"
lru = "0.16.2"
sysinfo = "0.37.2"
bloomfilter = "3.0.1"
ipnet = "2.11.0"
moka = { version = "0.12.11", features = ["sync"] }
memmap2 = "0.9.9"

# CLI dependencies (optional)
colored = { version = "3.0.0", optional = true }
clap = { version = "4.5.51", features = ["derive"], optional = true }

# GUI dependencies (optional)
iced = { version = "0.13.1", features = ["tokio", "svg"], optional = true }
rfd = { version = "0.15.4", optional = true }
tokio = { version = "1.48.0", features = ["full"], optional = true }

[profile.release]
codegen-units = 1
opt-level = "z"
panic = "abort"
strip = true
lto = true
